<resources>
    <string name="app_name">Digital Clock</string>
    <string name="action_settings">Settings</string>
    <string name="default_time_format">HH:mm:ss</string>
    <string name="title_activity_setting">設定</string>
    <string name="text_size">サイズ:</string>
    <string name="text_color">時刻の色</string>
    <string name="background_color">背景の色</string>
    <string name="background_image">背景に画像を使用する</string>
    <string name="background_image_select">背景画像を選択する</string>
    <string name="font_Select">フォントを選択する</string>
    <string name="font_family_name">フォント</string>
    <string name="appwidget_text">デジタル時計</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
